[gd_scene load_steps=9 format=2]

[ext_resource path="res://fondo_ejemplo.png" type="Texture" id=1]
[ext_resource path="res://01.png" type="Texture" id=2]
[ext_resource path="res://personaje.gd" type="Script" id=3]
[ext_resource path="res://botones/pausa.png" type="Texture" id=4]
[ext_resource path="res://Screen.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44.5, 88.5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Juego" type="Node"]
pause_mode = 2

[node name="Fondo" type="AnimatedSprite" parent="."]
pause_mode = 1
position = Vector2( 640, 359 )
scale = Vector2( 0.670833, 0.668519 )
frames = SubResource( 1 )
playing = true

[node name="personaje" type="KinematicBody2D" parent="."]
pause_mode = 1
position = Vector2( 655, 444 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
speed = 250

[node name="CollisionShape2D" type="CollisionShape2D" parent="personaje"]
position = Vector2( -1, -1 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="personaje"]
position = Vector2( 2, -18 )
scale = Vector2( 0.273443, 0.335836 )
frames = SubResource( 5 )

[node name="Interfaz" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="boton_pausa_main" type="Button" parent="Interfaz"]
pause_mode = 1
margin_left = 21.0
margin_top = 15.0
margin_right = 99.0
margin_bottom = 87.0
icon = ExtResource( 4 )
expand_icon = true

[node name="menu_pausa" type="CanvasLayer" parent="Interfaz"]
pause_mode = 2
visible = false

[node name="fondo_pausa" type="ColorRect" parent="Interfaz/menu_pausa"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
color = Color( 0.0745098, 0.0117647, 0.0117647, 0.611765 )

[node name="boton_pausa_salir" type="Button" parent="Interfaz/menu_pausa"]
pause_mode = 2
process_priority = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 50.0
margin_right = 68.0
margin_bottom = 90.0
text = "Salir"

[node name="boton_pausa_volver" type="Button" parent="Interfaz/menu_pausa"]
pause_mode = 2
process_priority = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -30.5
margin_right = 92.0
margin_bottom = 30.5
text = "Volver"

[connection signal="pressed" from="Interfaz/boton_pausa_main" to="Interfaz" method="_on_boton_pausa_main_pressed"]
[connection signal="pressed" from="Interfaz/menu_pausa/boton_pausa_salir" to="Interfaz" method="_on_boton_pausa_salir_pressed"]
[connection signal="pressed" from="Interfaz/menu_pausa/boton_pausa_volver" to="Interfaz" method="_on_boton_pausa_volver_pressed"]
